--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="container">
             <div class="logo">
-                <img src="/logo_yellow_black.png" alt="شعار باور جيم">
+                <img src="logo_yellow_black.png" alt="شعار باور جيم">
             </div>
             <ul class="nav-links">
                 <li><a href="#about">من نحن</a></li>
