--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="about-image-placeholder">
                         <!-- Placeholder for an image - to be discussed with user if they can provide one -->
-                        <img src="https://via.placeholder.com/450x350/000000/FFFF00?text=Power+Gym+Vibes" alt="أجواء صالة باور جيم">
+                        <img src="about_us_image.png" alt="أجواء صالة باور جيم">
                     </div>
                 </div>
             </div>
