--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                         <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً. نؤمن بأن القوة الحقيقية تكمن في الاستمرارية والتحدي، ولهذا نوفر لك كل ما تحتاجه لرحلة لياقة ناجحة وممتعة.</p>
                     </div>
                     <div class="about-image-placeholder">
-                        <!-- Placeholder for an image - to be discussed with user if they can provide one -->
                         <img src="about_us_image.png" alt="أجواء صالة باور جيم">
                     </div>
                 </div>
@@ -95,7 +94,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة. تطوير بواسطة فريق Manus.</p>
+            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة. .</p>
         </div>
     </footer>
 
