--- a/index.html
+++ b/index.html
@@ -1,99 +1,101 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صالة باور جيم الرياضية</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>صالة باور جيم الرياضية</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <div class="logo">
-                <img src="logo_yellow_black.png" alt="شعار باور جيم">
-            </div>
-            <ul class="nav-links">
-                <li><a href="#about">من نحن</a></li>
-                <li><a href="#pricing">الأسعار</a></li>
-                <li><a href="#contact">تواصل معنا</a></li>
-            </ul>
-            <div class="menu-toggle">
-                <div class="hamburger"></div>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="container">
+      <div class="logo">
+        <img src="logo_yellow_black.png" alt="شعار باور جيم">
+      </div>
+      <ul class="nav-links">
+        <li><a href="#about">من نحن</a></li>
+        <li><a href="#pricing">الأسعار</a></li>
+        <li><a href="#contact">تواصل معنا</a></li>
+      </ul>
+      <div class="menu-toggle">
+        <div class="hamburger"></div>
+      </div>
+    </nav>
+  </header>
 
-    <section class="hero">
-        <div class="hero-overlay"></div>
-        <div class="container hero-content">
-            <h1 class="hero-title">أطلق <span class="highlight-yellow">قوتك</span> الكامنة</h1>
-            <p class="hero-subtitle">باور جيم: حيث يبدأ تحولك نحو الأفضل.</p>
-            <a href="#pricing" class="btn btn-primary">اكتشف باقاتنا الآن</a>
+  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="container hero-content">
+      <h1 class="hero-title">أطلق <span class="highlight-yellow">قوتك</span> الكامنة</h1>
+      <p class="hero-subtitle">باور جيم: حيث يبدأ تحولك نحو الأفضل.</p>
+      <a href="#pricing" class="btn btn-primary">اكتشف باقاتنا الآن</a>
+    </div>
+  </section>
+
+  <main>
+    <!-- ABOUT SECTION -->
+    <section id="about" class="about-section content-section">
+      <div class="container">
+        <h2 class="section-title">من <span class="highlight-yellow">نحن</span>؟</h2>
+        <div class="about-content-overlay">
+          <div class="about-text">
+            <p>نحن في "باور جيم"، لسنا مجرد صالة رياضية، بل مجتمع رياضي متكامل يسعى لإلهامك وتمكينك لتحقيق أهدافك الصحية والبدنية. منذ تأسيسنا قبل 33 عاماً، ونحن ملتزمون بتقديم تجربة رياضية فريدة تجمع بين أحدث المعدات، وأفضل المدربين المحترفين، وبيئة محفزة تدفعك لتجاوز حدودك.</p>
+            <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً. نؤمن بأن القوة الحقيقية تكمن في الاستمرارية والتحدي، ولهذا نوفر لك كل ما تحتاجه لرحلة لياقة ناجحة وممتعة.</p>
+          </div>
         </div>
+      </div>
     </section>
 
-    <main>
-        <section id="about" class="about-section content-section">
-            <div class="container">
-                <h2 class="section-title">من <span class="highlight-yellow">نحن</span>؟</h2>
-                <div class="about-content-overlay">
-                    <img src="about_us_image.png" alt="أجواء صالة باور جيم" class="about-bg-image">
-                    <div class="about-text">
-                        <p>نحن في "باور جيم"، لسنا مجرد صالة رياضية، بل مجتمع رياضي متكامل يسعى لإلهامك وتمكينك لتحقيق أهدافك الصحية والبدنية. منذ تأسيسنا قبل 33 عاماً، ونحن ملتزمون بتقديم تجربة رياضية فريدة تجمع بين أحدث المعدات، وأفضل المدربين المحترفين، وبيئة محفزة تدفعك لتجاوز حدودك.</p>
-                        <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً. نؤمن بأن القوة الحقيقية تكمن في الاستمرارية والتحدي، ولهذا نوفر لك كل ما تحتاجه لرحلة لياقة ناجحة وممتعة.</p>
-                    </div>
-                </div>
+    <!-- PRICING SECTION -->
+    <section id="pricing" class="pricing-section content-section alt-bg">
+      <div class="container">
+        <h2 class="section-title"><span class="highlight-yellow">أسعارنا</span> وعروضنا الحصرية</h2>
+        <div class="pricing-grid">
+          <div class="price-card">
+            <div class="price-card-header">
+              <h3>عرض الانطلاق الذهبي</h3>
             </div>
-        </section>
-
-        <section id="pricing" class="pricing-section content-section alt-bg">
-            <div class="container">
-                <h2 class="section-title"><span class="highlight-yellow">أسعارنا</span> وعروضنا الحصرية</h2>
-                <div class="pricing-grid">
-                    <div class="price-card">
-                        <div class="price-card-header">
-                            <h3>عرض الانطلاق الذهبي</h3>
-                        </div>
-                        <div class="price-card-body">
-                            <p class="price-description">اشترك لمدة 3 أشهر واحصل على 3 أشهر إضافية <span class="highlight-yellow">مجاناً</span>!</p>
-                            <p class="price-amount">ابتداءً من <span class="amount">1300</span> ريال</p>
-                            <ul class="features-list">
-                                <li><span class="highlight-yellow">✔</span> وصول كامل لجميع الأجهزة</li>
-                                <li><span class="highlight-yellow">✔</span> برامج تدريبية متنوعة</li>
-                                <li><span class="highlight-yellow">✔</span> بيئة رياضية محفزة</li>
-                            </ul>
-                            <a href="#contact" class="btn btn-secondary">انضم إلينا اليوم</a>
-                        </div>
-                        <div class="price-card-footer">
-                            <p class="small-text">*تطبق الشروط والأحكام. العرض متوفر لفترة محدودة.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="price-card-body">
+              <p class="price-description">اشترك لمدة 3 أشهر واحصل على 3 أشهر إضافية <span class="highlight-yellow">مجاناً</span>!</p>
+              <p class="price-amount">ابتداءً من <span class="amount">1300</span> ريال</p>
+              <ul class="features-list">
+                <li><span class="highlight-yellow">✔</span> وصول كامل لجميع الأجهزة</li>
+                <li><span class="highlight-yellow">✔</span> برامج تدريبية متنوعة</li>
+                <li><span class="highlight-yellow">✔</span> بيئة رياضية محفزة</li>
+              </ul>
+              <a href="#contact" class="btn btn-secondary">انضم إلينا اليوم</a>
             </div>
-        </section>
-
-        <section id="contact" class="contact-section content-section">
-            <div class="container">
-                <h2 class="section-title">تواصل <span class="highlight-yellow">معنا</span></h2>
-                <div class="contact-info">
-                    <p>نحن هنا لمساعدتك في بدء رحلتك نحو القوة والصحة. لا تتردد في التواصل معنا!</p>
-                    <p><strong>رقم الهاتف:</strong> <a href="tel:0544477777" class="contact-link">0544477777</a></p>
-                    <p><strong>فروعنا:</strong> الأحساء - الدمام - الخبر - القطيف</p>
-                    <p>تابعنا على <a href="https://www.instagram.com/powergym.sa/" target="_blank" rel="noopener noreferrer" class="contact-link social-link">إنستغرام</a> لمعرفة آخر الأخبار والعروض.</p>
-                </div>
+            <div class="price-card-footer">
+              <p class="small-text">*تطبق الشروط والأحكام. العرض متوفر لفترة محدودة.</p>
             </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة.</p>
+          </div>
         </div>
-    </footer>
+      </div>
+    </section>
 
-    <script src="script.js"></script>
+    <!-- CONTACT SECTION -->
+    <section id="contact" class="contact-section content-section">
+      <div class="container">
+        <h2 class="section-title">تواصل <span class="highlight-yellow">معنا</span></h2>
+        <div class="contact-info">
+          <p>نحن هنا لمساعدتك في بدء رحلتك نحو القوة والصحة. لا تتردد في التواصل معنا!</p>
+          <p><strong>رقم الهاتف:</strong> <a href="tel:0544477777" class="contact-link">0544477777</a></p>
+          <p><strong>فروعنا:</strong> الأحساء - الدمام - الخبر - القطيف</p>
+          <p>تابعنا على <a href="https://www.instagram.com/powergym.sa/" target="_blank" rel="noopener noreferrer" class="contact-link social-link">إنستغرام</a> لمعرفة آخر الأخبار والعروض.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة.</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
