--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -28,7 +27,6 @@
     </header>
 
     <section class="hero">
-        <!-- overlay stays if you want a slight dark tint; you can remove .hero-overlay entirely if not needed -->
         <div class="hero-overlay"></div>
         <div class="container hero-content">
             <h1 class="hero-title">أطلق <span class="highlight-yellow">قوتك</span> الكامنة</h1>
@@ -43,8 +41,8 @@
                 <h2 class="section-title">من <span class="highlight-yellow">نحن</span>؟</h2>
                 <div class="about-content-grid">
                     <div class="about-text">
-                        <p>نحن في "باور جيم"، لسنا مجرد صالة رياضية، بل مجتمع رياضي متكامل يسعى لإلهامك وتمكينك لتحقيق أهدافك الصحية والبدنية. منذ تأسيسنا قبل 33 عاماً، ونحن ملتزمون بتقديم تجربة رياضية فريدة تجمع بين أحدث المعدات، وأفضل المدربين المحترفين، وبيئة محفزة تدفعك لتجاوز حدودك.</p>
-                        <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً. نؤمن بأن القوة الحقيقية تكمن في الاستمرارية والتحدي، ولهذا نوفر لك كل ما تحتاجه لرحلة لياقة ناجحة وممتعة.</p>
+                        <p>نحن في "باور جيم"، لسنا مجرد صالة رياضية، بل مجتمع رياضي متكامل يسعى لإلهامك وتمكينك لتحقيق أهدافك الصحية والبدنية...</p>
+                        <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً...</p>
                     </div>
                     <div class="about-image-placeholder">
                         <img src="about_us_image.png" alt="أجواء صالة باور جيم">
@@ -75,7 +73,6 @@
                             <p class="small-text">*تطبق الشروط والأحكام. العرض متوفر لفترة محدودة.</p>
                         </div>
                     </div>
-                    <!-- Add more price cards if needed -->
                 </div>
             </div>
         </section>
