--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <h2 class="section-title">من <span class="highlight-yellow">نحن</span>؟</h2>
                 <div class="about-content-grid">
                     <div class="about-text">
-                        <p>نحن في "باور جيم"، لسنا مجرد صالة رياضية، بل مجتمع رياضي متكامل يسعى لإلهامك وتمكينك لتحقيق أهدافك الصحية والبدنية...</p>
-                        <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً...</p>
+                        <p>نحن في "باور جيم"، لسنا مجرد صالة رياضية، بل مجتمع رياضي متكامل يسعى لإلهامك وتمكينك لتحقيق أهدافك الصحية والبدنية. منذ تأسيسنا قبل 33 عاماً، ونحن ملتزمون بتقديم تجربة رياضية فريدة تجمع بين أحدث المعدات، وأفضل المدربين المحترفين، وبيئة محفزة تدفعك لتجاوز حدودك.</p>
+                        <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً. نؤمن بأن القوة الحقيقية تكمن في الاستمرارية والتحدي، ولهذا نوفر لك كل ما تحتاجه لرحلة لياقة ناجحة وممتعة.</p>
                     </div>
                     <div class="about-image-placeholder">
                         <img src="about_us_image.png" alt="أجواء صالة باور جيم">
@@ -73,6 +73,7 @@
                             <p class="small-text">*تطبق الشروط والأحكام. العرض متوفر لفترة محدودة.</p>
                         </div>
                     </div>
+                    <!-- Add more price cards if needed -->
                 </div>
             </div>
         </section>
@@ -85,6 +86,7 @@
                     <p><strong>رقم الهاتف:</strong> <a href="tel:0544477777" class="contact-link">0544477777</a></p>
                     <p><strong>فروعنا:</strong> الأحساء - الدمام - الخبر - القطيف</p>
                     <p>تابعنا على <a href="https://www.instagram.com/powergym.sa/" target="_blank" rel="noopener noreferrer" class="contact-link social-link">إنستغرام</a> لمعرفة آخر الأخبار والعروض.</p>
+                    <!-- Add other social media if available -->
                 </div>
             </div>
         </section>
