--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
 
     <section class="hero">
+        <div class="hero-overlay"></div>
         <div class="container hero-content">
             <h1 class="hero-title">أطلق <span class="highlight-yellow">قوتك</span> الكامنة</h1>
             <p class="hero-subtitle">باور جيم: حيث يبدأ تحولك نحو الأفضل.</p>
@@ -44,6 +45,7 @@
                         <p>تنتشر فروعنا في الأحساء، الدمام، الخبر، والقطيف، لنكون أقرب إليك دائماً. نؤمن بأن القوة الحقيقية تكمن في الاستمرارية والتحدي، ولهذا نوفر لك كل ما تحتاجه لرحلة لياقة ناجحة وممتعة.</p>
                     </div>
                     <div class="about-image-placeholder">
+                        <!-- Placeholder for an image - to be discussed with user if they can provide one -->
                         <img src="about_us_image.png" alt="أجواء صالة باور جيم">
                     </div>
                 </div>
@@ -72,6 +74,7 @@
                             <p class="small-text">*تطبق الشروط والأحكام. العرض متوفر لفترة محدودة.</p>
                         </div>
                     </div>
+                    <!-- Add more price cards if needed -->
                 </div>
             </div>
         </section>
@@ -84,6 +87,7 @@
                     <p><strong>رقم الهاتف:</strong> <a href="tel:0544477777" class="contact-link">0544477777</a></p>
                     <p><strong>فروعنا:</strong> الأحساء - الدمام - الخبر - القطيف</p>
                     <p>تابعنا على <a href="https://www.instagram.com/powergym.sa/" target="_blank" rel="noopener noreferrer" class="contact-link social-link">إنستغرام</a> لمعرفة آخر الأخبار والعروض.</p>
+                    <!-- Add other social media if available -->
                 </div>
             </div>
         </section>
@@ -91,10 +95,10 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة.</p>
+            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة. تطوير بواسطة فريق Manus.</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
-</html>
+</html
