--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="container">
             <div class="logo">
-                <img src="logo_yellow_black.png" alt="شعار باور جيم">
+                <img src="06302271-FBF1-4790-BFF6-3B7567A05CA8.png" alt="شعار باور جيم">
             </div>
             <ul class="nav-links">
                 <li><a href="#about">من نحن</a></li>
@@ -95,7 +95,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة. تطوير بواسطة فريق Manus.</p>
+            <p>&copy; 2025 صالة باور جيم الرياضية. جميع الحقوق محفوظة .</p>
         </div>
     </footer>
 
